--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,27 @@
 on:
   push:
+    jobs:
+      test:
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v3
+        - run: npm i jsverify
+        - run: node code.test.js
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: npm i jsverify
-    - run: node code.test.js
+  pull_request:
+    types: [opened, synchronize]
+    jobs:
+      explain_code:
+        runs-on: ubuntu-latest
+        name: ChatGPT explain code
+        steps:
+          - name: ChatGPT explain code
+            uses: cirolini/chatgpt-github-actions@v1.3
+            with:
+              openai_api_key: ${{ secrets.openai_api_key }}
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              github_pr_id: ${{ github.event.number }}
+              openai_engine: "text-davinci-002" #optional
+              openai_temperature: 0.5 #optional
+              openai_max_tokens: 2048 #optional
+              mode: file # file or patch
