--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -10,7 +10,7 @@
         - name: ChatGPT Explain Code
           uses: cirolini/chatgpt-github-actions@v1.4
           with:
-            openai_api_key: ${{ secrets.openai_api_key }}
+            openai_api_key: ${{ secrets.OPENAI_API_KEY }}
             github_token: ${{ secrets.GITHUB_TOKEN }}
             github_pr_id: ${{ github.event.number }}
             openai_engine: "text-davinci-002" #optional
