--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -16,4 +16,4 @@
             openai_engine: "text-davinci-002" #optional
             openai_temperature: 0.5 #optional
             openai_max_tokens: 2048 #optional
-            mode: file # file or patch
+            mode: files # files or patch
