--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -13,7 +13,7 @@
             openai_api_key: ${{ secrets.OPENAI_API_KEY }}
             github_token: ${{ secrets.GITHUB_TOKEN }}
             github_pr_id: ${{ github.event.number }}
-            openai_engine: "text-davinci-002" #optional
+            openai_engine: "gpt-3.5-turbo-instruct" #optional
             openai_temperature: 0.5 #optional
             openai_max_tokens: 2048 #optional
             mode: files # files or patch
