--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -8,7 +8,7 @@
       name: ChatGPT Explain Code
       steps:
         - name: ChatGPT Explain Code
-          uses: richmiles/chatgpt-github-actions
+          uses: richmiles/chatgpt-github-actions@main
           with:
             openai_api_key: ${{ secrets.OPENAI_API_KEY }}
             github_token: ${{ secrets.GITHUB_TOKEN }}
