--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -17,3 +17,5 @@
             openai_temperature: 0.5 #optional
             openai_max_tokens: 2048 #optional
             mode: files # files or patch
+            included_file_extensions: "js"
+            include_tokens_in_output: true
